# flatfile-validator

./: .gitignore  README.md  pyproject.toml
flatfile_validator/: __init__.py  cli.py  profiler.py  schema.py  validator.py
tests/: test_schema.py  test_validator.py
